manifest/elk/kibana.yaml
kind: List
apiVersion: v1
items:
- apiVersion: apps/v1beta1
  kind: Deployment
  metadata:
    name: kb-cluster
  spec:
    replicas: 2
    template:
      metadata:
        name: kb-cluster
        labels:
          app: kb-cluster
      spec:
        imagePullSecrets:
        - name: mydocker
        containers:
        - image: kibana:6.4.0
          name: kb
          ports:
          - name: http
            containerPort: 5601
- apiVersion: v1
  kind: Service
  metadata:
    name: kb-cluster-svc
  spec:
    #type: NodePort
    type: ClusterIP
    ports:
    - name: http
      port: 5601
      targetPort: 5601
      #nodePort: 32601
    selector:
      app: kb-cluster
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    generation: 1
    name: prod-kibana.bgbiao.cn
  spec:
    rules:
    - host: prod-kibana.bgbiao.cn
      http:
        paths:
        - backend:
            serviceName: kb-cluster-svc
            servicePort: 5601
          #path: /
          #kibana默认会把/转到/app/kibana 因此，path: /需要注释掉
  status:
    loadBalancer: {}
